rename the total voters columns based on the data file descriptions.

--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -94,7 +94,9 @@ df = full_join(VS_sampled, HS_sampled, by = c("County"="County",
                                               "Party"="Party",
                                               "Race"="Race",
                                               "Ethnic"="Ethnic",
-                                              "Sex"="Sex"))
+                                              "Sex"="Sex")) %>%
+  rename(total_registered_voter = total_voter.x,
+         total_voted_voter = total_voter.y)
 
 ```
 
