--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -82,7 +82,8 @@ df <-  full_join(VS_sampled, HS_sampled, by = c("County"="County",
          total_voted_voter = total_voter.y) %>%
   filter(!is.na(total_registered_voter)) %>%
   replace(is.na(.), 0) %>%
-  mutate(Turnout = total_voted_voter/total_registered_voter)
+  mutate(Turnout = total_voted_voter/total_registered_voter) %>%
+  filter(Turnout <= 1)
 
 # sum(is.na(df$total_voted_voter))
 # hist(df$Turnout)
@@ -104,7 +105,8 @@ ggplot(df,
 ggplot(df, aes(x = County,
                y= Turnout, 
                fill = County)) + 
-    geom_boxplot() 
+    geom_boxplot() + 
+  coord_flip()
 
 ```
 #### Preccint
