--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -82,8 +82,11 @@ df <-  full_join(VS_sampled, HS_sampled, by = c("County"="County",
          total_voted_voter = total_voter.y) %>%
   filter(!is.na(total_registered_voter)) %>%
   replace(is.na(.), 0) %>%
+  filter(total_voted_voter <= total_registered_voter) %>%
   mutate(Turnout = total_voted_voter/total_registered_voter) %>%
-  filter(Turnout <= 1)
+  filter(Turnout <= 1) %>%
+  mutate(total_registered_voter = as.numeric(total_registered_voter),
+         total_voted_voter = as.numeric(total_voted_voter))
 
 # sum(is.na(df$total_voted_voter))
 # hist(df$Turnout)
