--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -25,12 +25,12 @@ options(mc.cores=parallel::detectCores())
 ```
 
 ```{r, warning=FALSE, message=FALSE, error=FALSE}
-VS <- read.delim("voter_stats_20201103.txt", header = TRUE)
-HS <- read.delim("history_stats_20201103.txt", header = TRUE)
+VS <- read.delim("voter_stats_20201103.txt", header = TRUE)  # Registered voters
+HS <- read.delim("history_stats_20201103.txt", header = TRUE)  # Actual voters
 ```
 
 ```{r}
-# aggregate
+# Sum voters across the following relevant categories
 VS_aggregated <- aggregate(VS$total_voters,
                              list(County=VS$county_desc,
                                   Precinct=VS$precinct_abbrv,
@@ -69,7 +69,7 @@ HS_sampled <- HS_aggregated %>%
 ```
 
 ```{r}
-# merge 
+# Merge voter records with registered records 
 df <-  full_join(VS_sampled, HS_sampled, by = c("County"="County",
                                               "Precinct"="Precinct",
                                               "Vtd"="Vtd",
@@ -80,17 +80,18 @@ df <-  full_join(VS_sampled, HS_sampled, by = c("County"="County",
                                               "Sex"="Sex")) %>%
   rename(total_registered_voter = total_voter.x,
          total_voted_voter = total_voter.y) %>%
-  filter(!is.na(total_registered_voter)) %>%
-  replace(is.na(.), 0) %>%
-  filter(total_voted_voter <= total_registered_voter) %>%
-  mutate(Turnout = total_voted_voter/total_registered_voter) %>%
-  filter(Turnout <= 1) %>%
+  # Some categories had registered voters that didn't vote - replace with 0
+  mutate(total_voted_voter = replace_na(total_voted_voter, 0)) %>%
+  
+  # No reason registered voters should be missing - remove these
+  filter(!is.na(total_registered_voter)) %>% 
+  
+  # Voters should not be greater than the number registered - remove these
+  filter(total_voted_voter <= total_registered_voter) %>% 
   mutate(total_registered_voter = as.numeric(total_registered_voter),
          total_voted_voter = as.numeric(total_voted_voter))
-
-# sum(is.na(df$total_voted_voter))
-# hist(df$Turnout)
 ```
+
 ## Introduction
 The United States have record-high turnout rates in 2020 over a century. So in this case study, we have built a Bayesian hierarchical model for the 2020 Presidential Election to investigate how different demographic variables lead to different turnout rates and the evidence of heterogeneity across counties. Our data sets come from the North Carolina State Board of Elections (NCSBE), which provides data on both the aggregate counts of registered voters and voters who actually voted by the demographic variables. 
 
